<resources>
    <string name="app_name">merchantSdk</string>
    <string name="payment_string">%1s <b>₹%2s %3s</b> %4s <b>%5s</b></string>
    <string name="just_pay">JUST PAY <font color="#104FF3">1/3<sup>rd</sup></font></string>
    <string name="as_downpayment_now">as downpayment now</string>
    <string name="two_minute_online_process">2 minute \nonline process</string>
    <string name="credit_card_not_required">Credit Card \nNOT Required</string>
    <string name="no_hidden_charges">No Hidden \nCharges</string>
    <string name="zero_percent_interest_installments"><font color="#104FF3">0%</font> Interest Installments</string>
    <string name="one_third">1/3<sup>rd</sup></string>
    <string name="rs_amount">₹%1s</string>
    <string name="pay_now">Pay Now</string>
    <string name="third_month"><![CDATA[3<sup>rd</sup> %1s]]></string>
    <string name="select">Select</string>
    <string name="at_payment_screen">at Payment Screen</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="add_products_to_cart">Add Products \nTo Cart</string>
    <string name="two_minute_online_order"><font color="#104FF3">2-minute</font> online \norder confirmation</string>
    <string name="bullet">\u2022</string>
    <string name="disable_payment_string"><font color="#00BC62">%1s ₹%2s %3s</font> + %4s %5s</string>
    <string name="cashback_and_t_and_c"><font color="#FD0000">%1s</font> T&amp;C</string>
    <string name="emi_plans">EMI Plans</string>
    <string name="flat_percentage">Flat %1s</string>
    <string name="t_and_c">T&amp;C</string>
    <string name="notification_error_ssl_cert_invalid">Internal connectivity error. Do you want to continue?</string>
    <string name="please_give_camera_permission_without_that_we_cannot">Please give camera permission without that we cannot help in uploading kyc images</string>
</resources>