<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_dialog_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relCross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_close" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/inter_bold_700"
        android:gravity="center"
        android:text="@string/just_pay"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/inter_500_medium"
        android:gravity="center"
        android:text="@string/as_downpayment_now"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="31dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_clock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/inter_500_medium"
                    android:gravity="center"
                    android:text="@string/two_minute_online_process"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="31dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_credit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/inter_500_medium"
                    android:gravity="center"
                    android:text="@string/credit_card_not_required"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="31dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_money" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/inter_500_medium"
                    android:gravity="center"
                    android:text="@string/no_hidden_charges"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_grey" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:fontFamily="@font/inter_bold_700"
        android:gravity="center"
        android:text="@string/zero_percent_interest_installments"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_third"
                android:textColor="@color/txt_grey"
                android:textSize="10sp" />

            <ImageView
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/ic_pizza_first" />

            <TextView
                android:id="@+id/txtDownpayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_500_medium"
                android:text="@string/rs_amount"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_500_medium"
                android:text="@string/pay_now"
                android:textColor="@color/black"
                android:textSize="10sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_third"
                android:textColor="@color/txt_grey"
                android:textSize="10sp" />

            <ImageView
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/ic_pizza_second" />

            <TextView
                android:id="@+id/tvFirstEmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_500_medium"
                android:text="@string/rs_amount"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvFirstMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_500_medium"
                android:text="@string/third_month"
                android:textColor="@color/black"
                android:textSize="10sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_third"
                android:textColor="@color/txt_grey"
                android:textSize="10sp" />

            <ImageView
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/ic_pizza_third" />

            <TextView
                android:id="@+id/tvSecondEmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_500_medium"
                android:text="@string/rs_amount"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvSecondMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_500_medium"
                android:text="@string/third_month"
                android:textColor="@color/black"
                android:textSize="10sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="25dp"
        android:background="@color/inner_border" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_600_semibold"
                android:text="@string/select"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/ic_snapmint_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_600_semibold"
                android:text="@string/at_payment_screen"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_border"
                    android:paddingStart="15dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_500_medium"
                        android:text="@string/step_1"
                        android:textColor="@color/app_color"
                        android:textSize="9sp" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/inter_500_medium"
                    android:gravity="center"
                    android:text="@string/add_products_to_cart"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="100dp"
                android:layout_marginStart="15dp"
                android:background="@color/line_grey" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_border"
                    android:paddingStart="15dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_500_medium"
                        android:text="@string/step_2"
                        android:textColor="@color/app_color"
                        android:textSize="9sp" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_600_semibold"
                        android:text="@string/select"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="17dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="6dp"
                        android:src="@drawable/ic_snapmint_logo" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_600_semibold"
                    android:text="@string/at_payment_screen"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="100dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/line_grey" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_border"
                    android:paddingStart="15dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_500_medium"
                        android:text="@string/step_3"
                        android:textColor="@color/app_color"
                        android:textSize="9sp" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/inter_500_medium"
                    android:gravity="center"
                    android:text="@string/two_minute_online_order"
                    android:textColor="@color/black"
                    android:textSize="8sp" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>